# idz_c-c-

./: .travis.yml  CMakeLists.txt  README.md  README.rst  hello.c  main.c  test.cpp
project/: .travis.yml  CMakeLists.txt  Makefile  config-auto.h  data.c  main  main.c  program  project.h  tests_cppunit  tests_cppunit.cpp
project/cmake/: Findlibnew.cmake
